# CppInterp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Common/: CMakeLists.txt
Common/include/: Logger.h  Timer.h
Common/src/: Timer.cpp
Doc/: semantic_check.md  simple_c_grammar.md
UnitTest/: CMakeLists.txt  RunTest.cpp  TestLexer.hpp  TestParser.hpp
include/: Exception.hpp  Lexer.h  Parser.h  SemanticAnalyzer.h
src/: Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp  main.cpp
test/: CMakeLists.txt  RunTest.cpp
